# ilm

./: .gitignore  Cargo.toml  Dockerfile  Makefile.rust  README.md  docker-compose.yml  go.mod  go.sum  ilm.db-shm  ilm.db-wal  makefile  setup-rust.sh  test_init.sql
cmd/: main.go
config/: config.dev.toml  config.dev.yaml  config.go  config.toml
docs/requirements/: best_practices.md  project_requirements.md  task_requirements.md
examples/: time_crate_demo.rs
internal/controller/project/: controller.go
internal/db/: db.go
internal/e/: error.go
internal/handler/http/: handler.go
internal/repository/database/: database.go
internal/repository/memory/: in_memory.go
internal/server/: setup.go
migrations/: 001_create_project_table.sql  001_create_projects_table.sql  002_create_task_table.sql  002_create_tasks_table.sql
pkg/httputils/: response.go
pkg/model/: Project.go
src/: config.rs  db.rs  lib.rs  main.rs  project.rs  project_repository.rs  project_service.rs  task.rs
src/application/: mod.rs  project.rs  repository.rs  task.rs
src/domain/: error.rs  mod.rs  project.rs  task.rs
src/infrastructure/: database.rs  mod.rs  project_repository.rs  repository.rs  task_repository.rs
src/presentation/: handlers.rs  mod.rs  project_handlers.rs  task_handlers.rs
test/: config.go  get_one_project_test.go  migrate.go  setup.go
test/helper/: helper.go
test/project/: get_one_project_test.go
test/project/migrations/: 0000_project_schema.up.sql  0001_project_data.down.sql  0001_project_data.up.sql
tests/: integration_tests.rs
(+6 files in other folders)
