[package]
name = "ilm"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "chrono",
    "uuid",
    "migrate",
] }
tokio = { version = "1.32", features = ["full"] }         # Async runtime
